final corrections after validation

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="CSS/styles.css" rel="stylesheet" type="text/css" />
+	<link href="CSS/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
 		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
        
 		<form name="toDoList">
-			<input type="text" name="ListItem" id="input"/>
+			<input type="text" name="ListItem" id="input">
 		</form>
     
 		<div onclick="newItem()" id="button">Add</div>
-		<br/>
+		<br>
 		<ol id="list"></ol>
   </div>
   <script
